removed default tabs from app and created new, registered actions service returns correct data, sending images as base 64
